Word Wrap fixed

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -23,9 +23,7 @@ p {
 .card-content-title {
     font-weight: bold;
 }
-/* .card-content {
-    height: 18rem;
-} */
+
 
 .nav-wrapper .fa-bars {
     font-size: 25px;
